--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,10 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^0.8.0-rc.7",
-    "iron-elements": "PolymerElements/iron-elements#~0.8.0"
+    "iron-elements": "PolymerElements/iron-elements#~0.8.0",
+    "firebase-element": "PolymerElements/firebase-element#~0.8.0"
+  },
+  "resolutions": {
+    "polymer": "v0.8.0-rc.7"
   }
 }
