--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "resolutions": {
     "polymer": "^0.9.0-rc.1",
     "iron-flex-layout": "^0.8.0",
-    "paper-styles": "^0.8.3"
+    "paper-styles": "^0.8.3",
+    "webcomponentsjs": "^0.7.0"
   }
 }
